# moo_sick

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: bind_playlist.rs  join.rs  leave.rs  list.rs  mod.rs  play.rs  pop.rs  pop_queue.rs  queue.rs  queue_track.rs  search.rs  search_for_track.rs
src/music/commands/: _template.rs  bind_playlist.rs  join_voice.rs  leave_voice.rs  list_current_queue.rs  mod.rs  pop_queue.rs  queue_track.rs  search_for_track.rs
