[package]
name = "moo_sick"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
reqwest = "0.11"
serenity = "0.12"
symphonia = "0.5"

[dependencies.songbird]
version = "0.4.0"
default-features = false
features = ["builtin-queue", "driver", "serenity", "native", "gateway"]

[dependencies.tokio]
version = "1"
features = ["macros", "signal", "rt-multi-thread"]
