[package]
name = "moo_sick"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
serde_json = "1.0"
serenity = "0.12"
symphonia = "0.5"

[dependencies.songbird]
version = "0.4.0"
default-features = false
features = ["builtin-queue", "driver", "serenity", "native", "gateway"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.tokio]
version = "1"
features = ["macros", "signal", "rt-multi-thread"]
