[package]
name = "moo_sick"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
iso8601 = "0.6.1"
iso8601-duration = "0.2"
serde_json = "1.0"
symphonia = "0.5"

[dependencies.serenity]
version = "0.12"
features = ["collector"]

[dependencies.songbird]
version = "0.4.0"
default-features = false
features = ["builtin-queue", "driver", "serenity", "native", "gateway"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.tokio]
version = "1"
features = ["macros", "signal", "rt-multi-thread"]
